--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -7,21 +7,26 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:debuggable="true"
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="edu.uprm.mod.store.MainActivity"
+            android:name="edu.uprm.mod.store.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="edu.uprm.mod.store.MainActivity"
+            android:label="@string/title_activity_main" >
         </activity>
     </application>
 
