--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.uprm.mod.store"
+    package="icom5016.modstore.activities"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
-        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="edu.uprm.mod.store.LoginActivity"
+            android:name="icom5016.modstore.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,9 +22,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="edu.uprm.mod.store.MainActivity"
-            android:label="@string/title_activity_main" >
+        <activity android:name="icom5016.modstore.activities.SearchActivity"
+            	  android:parentActivityName="icom5016.modstore.activities.MainActivity">
+            <meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value="com.example.myfirstapp.MainActivity" />
+        </activity>
+        <activity android:name="icom5016.modstore.activities.SettingsActivity"
+	              android:parentActivityName="icom5016.modstore.activities.MainActivity">
+	           <meta-data
+	            	android:name="android.support.PARENT_ACTIVITY"
+	            	android:value="com.example.myfirstapp.MainActivity" />
         </activity>
     </application>
 
