--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/ModStoreTheme" >
         <activity
             android:name="icom5016.modstore.activities.MainActivity"
             android:label="@string/app_name" >
@@ -34,6 +34,8 @@
 	            	android:name="android.support.PARENT_ACTIVITY"
 	            	android:value="com.example.myfirstapp.MainActivity" />
         </activity>
+        <activity android:name="icom5016.modstore.activities.LogInRegisterActivity"></activity>
+        <activity android:name="icom5016.modstore.activities.AboutActivity"></activity>
     </application>
 
 </manifest>
