Fix a muchas clases en OS 4:30pm

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -43,6 +43,8 @@
         </activity>
         <activity android:name="icom5016.modstore.activities.AboutActivity" >
         </activity>
+        <activity android:name="icom5016.modstore.activities.AdminActivity"></activity>
+        <activity android:name="icom5016.modstore.activities.ForgotActivity"></activity>
     </application>
 
 </manifest>
