--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -58,6 +58,14 @@
             android:name="icom5016.modstore.activities.ForgotActivity"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="icom5016.modstore.activities.MyOrdersActivity"
+            android:label="@string/title_activity_my_orders"
+            android:parentActivityName="icom5016.modstore.activities.MainInterfaceActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="icom5016.modstore.activities.MainInterfaceActivity" />
+        </activity>
     </application>
 
 </manifest>
