--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "express": "~3.3.5",
-    "mysql": "~2.0.0-alpha8"
+    "mysql": "~2.0.0-alpha8",
+    "async": "~0.2.9"
   }
 }
