--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -72,7 +72,10 @@
             android:name="icom5016.modstore.activities.ProductViewerActivity"
             android:label="@string/title_activity_product_viewer" >
         </activity>
-        <activity android:name="icom5016.modstore.activities.SellingViewerActivity"></activity>
+        <activity
+            android:name="icom5016.modstore.activities.SellingViewerActivity"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
