--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "express": "~3.3.5",
     "mysql": "~2.0.0-alpha8",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "request": "~2.27.0",
+    "underscore": "~1.5.2"
   }
 }
