Added better view of admin charts, fixed product view without being logged in

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -80,6 +80,10 @@
             android:name="icom5016.modstore.activities.ProductSellEditActivity"
             android:screenOrientation="portrait" >
         </activity>
+        
+                <activity
+            android:name="icom5016.modstore.activities.TouchImageActivity" >
+        </activity>
     </application>
 
 </manifest>
